--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "sequelize": "^6.25.3",
+    "sequelize-cli": "^6.5.1"
   }
 }
