--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "sequelize": "^6.25.3",
